added versions to handlebars and mobile-agent

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "devDependencies": {
     },
     "dependencies": {
-        "mobile-agent": "*",
-        "handlebars": "*",
+        "mobile-agent": "0.0.8",
+        "handlebars": "2.0.0-alpha.4",
         "async": "0.2.9"
     },
     "bugs": {
